--- a/login.html
+++ b/login.html
@@ -18,7 +18,10 @@
         <span class="login-title">
           <span class="saving-yellow">Saving</span> Secure
         </span>
-        <a href="../" class="btn-volver">Volver al Inicio</a>
+        <a href="../" class="btn-volver">
+          <span class="texto-desktop">Volver al Inicio</span>
+          <span class="texto-mobile">Volver</span>
+        </a>
       </div>
     </header>
     <div class="container">
